@@ -3,6 +3,6 @@ DIST plexus-component-api-1.0_alpha22.tar.bz2 15299 RMD160 598109f12a65a1e779306
 DIST plexus-component-api-1.0_alpha24.tar.bz2 15436 RMD160 9a425b431d90b4f72b0d89e65a0ac393adeb1455 SHA1 de260b2a227dcdfccd041ff247b75b917d068344 SHA256 c77e7b7c93e780e98549bf2701f8ef037d975be1e6e3bad94503353b35cb01f1
 EBUILD plexus-component-api-1.0_alpha14.ebuild 630 RMD160 f8deaf3a897fbbd8e5bfa1eceb5b356383fe2f1d SHA1 ed3f4892d0e8ea06aa65b2744196a631294743d0 SHA256 220d3dffc4b01e4f788e46d2519f667cbf617cde36a4af501c1401923c59e2d8
 EBUILD plexus-component-api-1.0_alpha22.ebuild 626 RMD160 e2215ce58ce1127c705ceabde8eb8f740a4674e2 SHA1 9e82c7b1cb13a65f5f532ce5e5c958fca0d9c5b9 SHA256 d347a7290c766b3d8139e03bb390a2bc19b9d7a8d85e8d9d4624ff15efff5f34
-EBUILD plexus-component-api-1.0_alpha24.ebuild 620 RMD160 e5c0580c576d51669cc8c56faaadce87c7a3f7f1 SHA1 4bd3df2364ef2c1d9c9554ec3749f26e88f2c259 SHA256 2b92f94294b5f1605b458c2f7b43ecfa494758cb731a744d70298eafaa1cb493
-MISC ChangeLog 752 RMD160 9e4c1858c8542e74e90f81e0f169b8d0c1d42356 SHA1 0b47dccb3383fb22bd6ab69de7f709662e68b1d1 SHA256 39b790046a1af01d0cbcadd973eaa5bedcbe5e6f91ab80728ea4a29e003dfafa
+EBUILD plexus-component-api-1.0_alpha24.ebuild 696 RMD160 e49872ad474d98331aa337bef0b680a184462561 SHA1 9c86185c1148d73206eea73161adb9edcd2aa165 SHA256 dd0d4161c338e017d31ccd52ed6d53350b38c323465934c4ab17acda3f8196a1
+MISC ChangeLog 888 RMD160 27d4363579c07f7dc1948cf42cc268c28cf87825 SHA1 3a8d3e7cd2f571ac741c389c6aae114d3f892731 SHA256 4daad50c921f1e9a927143a958a9920ac5d73223643a57b83d7ebe206f52cc58
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
