@@ -2,6 +2,8 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
+JAVA_PKG_IUSE="source"
+
 inherit java-maven-2
 
 DESCRIPTION="The Plexus project provides a full software stack for creating and executing software projects."
@@ -9,10 +11,13 @@ HOMEPAGE="http://plexus.codehaus.org/"
 SRC_URI="http://dev.gentooexperimental.org/~kiorky/${P}.tar.bz2"
 LICENSE="as-is" # http://plexus.codehaus.org/plexus-utils/license.html
 SLOT="0"
-KEYWORDS="~x86"
-IUSE="source"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
 DEP="=dev-java/plexus-classworlds-1.2*"
 DEPEND=">=virtual/jdk-1.4 ${DEP}"
 RDEPEND=">=virtual/jre-1.4 ${DEP}"
 EANT_GENTOO_CLASSPATH="plexus-classworlds"
 
+RESTRICT=test
+
+JAVA_PKG_SRC_DIRS="src/main/java/*"
